--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         archivesBaseName = "golden_hour"
         // Restricted as android only key
-        resValue 'string', 'google_maps_key', '"AIzaSyCgL2P-nJxJ8YrzGvO4CK29ra8SgbA6bQ4"'
+        resValue 'string', 'google_maps_key', '"GOOGLE_MAP_KEY"'
 
         // This API key will be used for geocoding API which will required IP Restriction from the backend
-        resValue 'string', 'geocoding_api', '"AIzaSyABgf01WbCdgvUMLt2bSk-CxKL6RkIz6Ew"'
+        resValue 'string', 'geocoding_api', '"GEOCODING_API_KEY"'
     }
     buildTypes {
         release {
